[gd_scene load_steps=4 format=3 uid="uid://g23050u7d6na"]

[ext_resource type="Script" path="res://Scripts/gui.gd" id="1_hkawb"]

[sub_resource type="LabelSettings" id="LabelSettings_xg7ms"]
font_size = 29

[sub_resource type="LabelSettings" id="LabelSettings_ebfd4"]
font_size = 28

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_hkawb")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 13
theme_override_constants/margin_top = 13
theme_override_constants/margin_right = 13

[node name="VBoxContainer_Life" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LifeLabelText" type="Label" parent="Control/MarginContainer/VBoxContainer_Life"]
layout_mode = 2
text = "Life"
label_settings = SubResource("LabelSettings_xg7ms")

[node name="LifeLabelCount" type="Label" parent="Control/MarginContainer/VBoxContainer_Life"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_xg7ms")

[node name="VBoxContainer_Score" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="Control/MarginContainer/VBoxContainer_Score"]
layout_mode = 2
size_flags_horizontal = 8
text = "Score: 0"
label_settings = SubResource("LabelSettings_ebfd4")
